src/App.css
/* App */
.app {
  height: 200vh;
  display: flex;
  flex-direction: column;
  padding-left: 15vw;
  padding-right: 15vw;

  background-image: linear-gradient(
    to top,
    #383c4d,
    #454d66,
    #525f80,
    #5f719b,
    #6b84b7,
    #8488c0,
    #9e8bc6,
    #b88ec8,
    #d186aa,
    #d7868a,
    #cd8c71,
    #b79664
  );
  background-color: black;
}

/* login/create account */
/* .login-title {
  text-align: center;
}

.login-message {
  text-align: center;
} */

.create-account-form {
  text-align: center;
}

.login-link {
  text-align: center;
}

.user-input {
  position: relative;
  display: flex;
  margin-left: auto;
  margin-right: auto;
}

/* Main Navbar */
.navbar-main {
  font-size: large;
  position: relative;
  margin-top: 3vw;
}

.navbar-items li {
  color: black;
  text-decoration: none;
}

.nav-link:hover {
  text-decoration: underline;
  text-underline-offset: 5px;
  font-weight: bold;
}

.navbar-items li {
  color: white;
}

.nav-logout:hover {
  cursor: pointer;
}

.globe {
  position: absolute;
  height: 50px;
  width: 50px;
  color: white;
  margin-left: -5vw;
}
/* Recipe Grid */

/* .grid-image {
  cursor: pointer;
  width: 190px;
  height: 164px;
  object-fit: cover;
  border-bottom-left-radius: 7%;
  border-bottom-right-radius: 7%; */

.recipe-grid {
  display: grid;
  grid-template-columns: repeat(4, minmax(200px, 1fr));
  gap: 1vw;
  row-gap: 2vw;
  padding: 10px;
  color: lightgrey;
  margin-top: 10vh;
}

.recipe-square {
  background-color: black;
  text-align: center;
  font-size: 18px;
  cursor: pointer;
  width: 100%; /* Adjusted to take 100% of the column width */
  height: 200px;
  border-width: 5px;
  border-style: solid;
  border-color: black;
  border-radius: 3%;
}

.recipe-square img {
  width: 100%;
  height: 88.7%;
  object-fit: cover; /* or object-fit: contain; depending on your preference */
  border-radius: 0% 0% 3% 3%;
}
*/ .recipe-link {
  color: pink;
}

.grid-title {
  color: white;
}

/* My Recipes Header */

.create-recipe-form {
  text-align: left;
  padding: 100px;
}

/* Carousel */

.carousel {
  color: white;
  width: 30vw;
  height: 30vh;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 16.8vh;
  margin-left: auto;
  margin-right: auto;
}

.carousel-image {
  width: 30vw;
  height: 30vh;
  object-fit: cover;
  border-radius: 10px;
}

.border-cover {
  background-color: none;
  border-color: black;
  border-style: solid;
  border-width: 10px;
  width: 31vw;
  height: 30.5vh;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 59vh;
  left: 34.5vw;
  z-index: 1;
}

.border-cover:hover {
  text-decoration: none;
}

/* .border-cover > * {
  opacity: 0%;
} */

.carousel-text {
  margin-left: auto;
  margin-right: auto;
}

/* Single Recipe Page */
.recipe-info {
  border-color: black;
  border-style: double;
  height: 500px;
  width: 700px;
}

.favorite-count {
  font-size: x-large;
  color: white;
}

/* Explore Header */

.explore-header {
  display: flex;
  flex-direction: column;
}

.search-input {
  background-color: white;
  right: 50px;
  color: black;
  border: none;
}

.search-btn {
  background-color: black;
  color: white;
}

.cook-filter:focus {
  background-color: blue;
}

/* .accordion-button:not(.collapsed)::after,
.accordion-button::after {
  background-image: unset !important;
} */

.accordion {
  --bs-accordion-btn-color: ghostwhite;
  --bs-accordion-btn-bg: pink;
  --bs-accordion-active-color: maroon;
  --bs-accordion-active-bg: lightpink;
}

/* Single Recipe Page */

.recipe-comp {
  font-weight: bold;
}
.recipe-title {
  font-size: 32px;
  margin-bottom: 20px;
}

.single-recipe ul {
  list-style: none;
  padding: 0;
}

.single-recipe ul li {
  margin-bottom: 10px;
}

/* .single-recipe button {
  padding: 10px 20px;
  margin-top: 10px;
  font-size: 16px;
  background-color: #4caf50;
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

.single-recipe button:hover {
  background-color: #45a049;
} */

/* Optional: Add more styling for links if needed */
.single-recipe a {
  color: #007bff;
  text-decoration: none;
}

.single-recipe a:hover {
  text-decoration: underline;
}

